# sn

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.sh  c17.cpp  c17Config.h  c17Config.h.in  cmake.sh  install.sh  run.sh
include/: c17.h
routines/: CMakeLists.txt  any.cpp  callable.cpp  dates.cpp  factory.cpp  map.cpp  option.cpp  threads.cpp
